<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="15dp"
    android:layout_marginHorizontal="14dp"
    android:layout_marginVertical="8dp"
    app:cardUseCompatPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/item_test_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_test_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/date_placeholder"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_test_title_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_test_date_text" >

            <TextView
                android:id="@+id/item_test_subject_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_placeholder"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="12sp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?attr/colorOnSurface"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:id="@+id/item_test_topic_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_placeholder"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_test_percentage_text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/item_test_marks_obtained_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:text="@string/marks_obtained_placeholder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:textColor="?attr/colorOnSurface" />

            <TextView
                android:id="@+id/item_test_total_marks_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:text="@string/total_marks_placeholder" />

        </LinearLayout>

        <TextView
            android:id="@+id/item_test_percentage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage_placeholder"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>